# informaticup-2023

./: .gitignore  Cargo.toml  Dockerfile  README.md  makefile
common/src/: lib.rs
inputs/: custom001.cli.json  custom001.solution.json  custom001.task.json  empty_task.json  long_path_001.json  long_path_20_25.json  long_path_20_40.json  path_finding_80_80.json  simple.search.json  xxl_001.json
model/: Cargo.toml
model/benches/: benchmarks.rs
model/src/: cli.rs  coord.rs  input.rs  lib.rs  map.rs  object.rs  solution.rs  task.rs
printer/: Cargo.toml
printer/src/: cli.rs  main.rs
qa/: Cargo.toml  build.rs
qa/src/: main.rs
simulator/: Cargo.toml
simulator/inputs/: conveyor_branch.json  test1.json  test2.json  test_task_004.json
simulator/src/: cli.rs  lib.rs  main.rs
solver/: Cargo.toml
solver/benches/: benchmarks.rs
solver/src/: cli.rs  distances.rs  lib.rs  main.rs  path.rs  path_graph.rs  paths.rs  run.rs  solve.rs
