[package]
name = "qa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
simulator = { path = "../simulator" }
solver = { path = "../solver" }
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }