[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
model = { path = "../model" }
simulator = { path = "../simulator" }
rand = "0.8.5"
