[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[features]
default = []
stats = [] # Print number of calculated solutions per second

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
common = { path = "../common" }
model = { path = "../model" }
simulator = { path = "../simulator" }
rand = "0.8.5"
criterion = { version = "0.4.0", features = ["html_reports"] }
fxhash = "0.2.1"
lazy_static = "1.4.0"

[[bench]]
name = "benchmarks"
harness = false
